put modifications on Github

--- a/bin/fnode_histogram-multi-iter_analysis.ipynb
+++ b/bin/fnode_histogram-multi-iter_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,43 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data at: 2018_11_19/2018_11_19_15_59_57_iz-0.145+-0.1dumpfort300mscyclerb-5/results.hdf5\n",
-      "name 'fort_exp' is not defined\n",
-      "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'Iz']\n"
-     ]
-    }
-   ],
-   "source": [
-    "exp_name = ''\n",
-    "if exp_name:\n",
-    "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
-    "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
-    "else:\n",
-    "    experiment_file = ''\n",
-    "q = qdp.QDP(base_data_path=dp)\n",
-    "q.load_data_file(experiment_file)\n",
-    "print \"ivars: {}\".format(q.experiments[0]['variable_list'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data at: 2020_02_03/2020_02_03_17_45_49_iz/results.hdf5\n",
+      "name 'fort_exp' is not defined\n",
+      "name 'rb_uwave_freq' is not defined\n",
+      "ivars: [u'Iz']\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "996e396d9344435fa01fc82bb1030c78",
+       "model_id": "5f0d54af112c4bf7b1fa3f0f00ebf69d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,72 +63,183 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 mean: 340.524752475 std. dev: 44.3580378954\n",
+      "1 mean: 273.099009901 std. dev: 22.0344037703\n",
+      "0 mean: 357.306930693 std. dev: 61.8173199118\n",
+      "1 mean: 274.306930693 std. dev: 23.1699457835\n",
+      "0 mean: 326.96039604 std. dev: 31.1008964221\n",
+      "1 mean: 269.346534653 std. dev: 18.5784052452\n"
+     ]
     }
    ],
    "source": [
+    "exp_name = ''\n",
+    "if exp_name:\n",
+    "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
+    "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
+    "else:\n",
+    "    experiment_file = ''\n",
+    "q = qdp.QDP(base_data_path=dp)\n",
+    "q.load_data_file(experiment_file)\n",
+    "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
+    "\n",
+    "\n",
     "itrs = len(q.experiments[0]['iterations'].keys())\n",
     "if 'fig' in locals():\n",
     "    plt.close(fig)\n",
-    "fig, ax = plt.subplots(ncols=2, nrows=itrs, figsize=(10,15))\n",
+    "fig, ax = plt.subplots(ncols=2, nrows=itrs, figsize=(10,10))\n",
     "shot = 0\n",
     "fit_params_r0 = []\n",
-    "fit_params_r1= []\n",
+    "fit_params_r1= [\"\"]\n",
     "# param_guess = [\n",
     "#     [(0.2, 250, 500), (0.2, 0.3, 10)],  # Cs\n",
     "#     [(0.1, 250, 500), (0.1, 0.3, 7)],  # Rb\n",
     "# ]\n",
     "signif = []\n",
+    "max_photons = -1\n",
     "for itr in range(itrs):\n",
-    "#     results = q.generate_thresholds(itr=itr, loss=True)\n",
-    "#     fit_params_r0.append(results[0][shot]['fit_params'])\n",
-    "#     fit_params_r1.append(results[1][shot]['fit_params'])\n",
-    "#     itr_cuts = {\n",
-    "#         0: q.get_thresholds()[0],\n",
-    "#         1: q.get_thresholds()[1]\n",
-    "#     }\n",
-    "#     print(itr_cuts)\n",
+    "    for r in range(2):\n",
+    "        max_photons = max(max_photons, np.max(q.experiments[0]['iterations'][itr]['signal_data'][:,0,r,0].astype(\"int\")))\n",
+    "\n",
+    "species = ['Cs', 'Rb']\n",
+    "#q.generate_thresholds(itr=itr, loss=False)\n",
+    "#retention = q.apply_thresholds(exclude_rois=[2])\n",
+    "for itr in range(itrs):\n",
+    "\n",
+    "    #results = q.generate_thresholds(itr=itr, loss=True)\n",
+    "    #fit_params_r0.append(results[0][shot]['fit_params'])\n",
+    "    #fit_params_r1.append(results[1][shot]['fit_params'])\n",
+    "    #itr_cuts = {\n",
+    "    #    0: q.get_thresholds()[0],\n",
+    "    #    1: q.get_thresholds()[1]\n",
+    "    #}\n",
+    "    #print(itr_cuts)\n",
     "    for r in range(2):\n",
     "        d0 = q.experiments[0]['iterations'][itr]['signal_data'][:,0,r,0].astype(\"int\")\n",
     "        d1 = q.experiments[0]['iterations'][itr]['signal_data'][:,1,r,0].astype(\"int\")\n",
-    "        ax[itr][r].hist(d0, bins=np.arange(0,np.max(d0)+1,10), density=True, histtype='step')\n",
-    "        ax[itr][r].axvline(x=np.mean(d0), color='r', linestyle='--')\n",
-    "        ax[itr][r].axvline(x=np.max(d0), color='k', linestyle='--')\n",
+    "        ax[itr][r].hist(d0, bins=np.arange(0,max_photons+1,5), range=(0, 100), density=True, histtype='step')\n",
+    "        #ax[itr][r].axvline(x=np.mean(d0), color='r', linestyle='--')\n",
+    "        ax[itr][r].axvline(x=np.max(d0)+2, color='g', linestyle='--')\n",
+    "        ax[itr][r].axvline(x=80, color='b', linestyle='--')\n",
+    "        print '{} mean: {} std. dev: {}'.format(r,np.mean(d0),np.std(d0))\n",
+    "        \n",
     "\n",
-    "        ivar_str = ','.join([\"{:.3f}\".format(q.experiments[0]['iterations'][itr]['variables'][v]) for v in q.experiments[0]['variable_list']])\n",
+    "\n",
+    "        #ivar_str = ','.join([\"{:.3f}\".format(q.experiments[0]['iterations'][itr]['variables'][v]) for v in q.experiments[0]['variable_list']])\n",
     "\n",
     "#         ax[itr][r].set_yscale('log', nonposy='clip')\n",
-    "        ax[itr][r].set_ylim(0, 0.005)\n",
+    "        #ax[itr][r].set_ylim(0, 0.005)\n",
     "#         if shot == 0:\n",
-    "        ax[itr][r].set_xlim(0, 500)\n",
+    "        ax[itr][r].set_xlim(0, max_photons+5)\n",
+    "        ax[itr][r].set_ylim(0,0.05)\n",
     "#             ax[itr][r].set_ylim(0, 0.01)\n",
-    "\n",
+    "        \n",
     "#         else:\n",
     "#             ax[itr][r].set_xlim(0, 30)\n",
-    "        ax[itr][r].set_title('itr: {}'.format(itr), loc='left')\n",
+    "        loading_st = '% Above 100: {:.3f}'.format(len(d0[np.logical_and(d0>550,d0<750)])/float(len(d0)))\n",
+    "        ax[itr][r].set_title(species[r]+' itr: {}: '.format(itr)+loading_st, loc='left')\n",
     "#         if len(results[r][shot]['fit_params']):\n",
     "#             xs = np.arange(750)\n",
     "#             ax[itr][r].plot(xs, results[r][shot]['function'](xs, *(results[r][shot]['fit_params'])))\n",
-    "\n",
+    "fig.tight_layout()\n",
     "fmts = ['pdf', 'png']\n",
     "fn = os.path.join(dp, q.experiments[0]['source_path'], 's0_signal_vs_iy_mz.{}')\n",
-    "for fmt in fmts:\n",
-    "    fig.savefig(fn.format(fmt), dpi=200, format=fmt)"
+    "#for fmt in fmts:\n",
+    "    #fig.savefig(fn.format(fmt), dpi=200, format=fmt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.4068836288463866"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[576]\n",
+      "   [672]\n",
+      "   [  0]]\n",
+      "\n",
+      "  [[532]\n",
+      "   [526]\n",
+      "   [  0]]]\n",
+      "\n",
+      "\n",
+      " [[[506]\n",
+      "   [503]\n",
+      "   [  0]]\n",
+      "\n",
+      "  [[471]\n",
+      "   [492]\n",
+      "   [  0]]]\n",
+      "\n",
+      "\n",
+      " [[[626]\n",
+      "   [502]\n",
+      "   [  0]]\n",
+      "\n",
+      "  [[617]\n",
+      "   [506]\n",
+      "   [  0]]]\n",
+      "\n",
+      "\n",
+      " ...\n",
+      "\n",
+      "\n",
+      " [[[488]\n",
+      "   [488]\n",
+      "   [  0]]\n",
+      "\n",
+      "  [[481]\n",
+      "   [476]\n",
+      "   [  0]]]\n",
+      "\n",
+      "\n",
+      " [[[498]\n",
+      "   [461]\n",
+      "   [  0]]\n",
+      "\n",
+      "  [[527]\n",
+      "   [466]\n",
+      "   [  0]]]\n",
+      "\n",
+      "\n",
+      " [[[538]\n",
+      "   [487]\n",
+      "   [  0]]\n",
+      "\n",
+      "  [[510]\n",
+      "   [484]\n",
+      "   [  0]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "testnode=q.experiments[0]['iterations'][0]['signal_data']\n",
+    "print(testnode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "min() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-1875300d76e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msignif\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: min() arg is an empty sequence"
+     ]
     }
    ],
    "source": [
@@ -155,7 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
