--- a/bin/fnode_loading_analysis.ipynb
+++ b/bin/fnode_loading_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -26,10 +26,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_11_19/2018_11_19_15_59_57_iz-0.145+-0.1dumpfort300mscyclerb-5/results.hdf5\n",
+      "data at: 2020_01_27/2020_01_27_15_34_15_rb_det/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'Iz']\n",
+      "ivars: [u'rb_d2_pgc_det']\n",
+      "--------------------\n",
+      "--------------------\n",
+      "--------------------\n",
+      "--------------------\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[2.21306915e-17 0.00000000e+00 0.00000000e+00]`\n",
+      "--------------------\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[2.21306915e-17 0.00000000e+00 0.00000000e+00]`\n",
+      "--------------------\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
@@ -41,34 +51,24 @@
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
-      "ivar: -0.2450\tcloading: 0.167\trloading: 0.036\t\tcretention: 0.000 +- 0.064\trretention: 0.000 +- 0.064\n",
-      "ivar: -0.2250\tcloading: 0.176\trloading: 0.044\t\tcretention: 0.000 +- 0.053\trretention: 0.000 +- 0.053\n",
-      "ivar: -0.2050\tcloading: 0.187\trloading: 0.080\t\tcretention: 0.000 +- 0.029\trretention: 0.000 +- 0.029\n",
-      "ivar: -0.1850\tcloading: 0.251\trloading: 0.112\t\tcretention: 0.000 +- 0.021\trretention: 0.000 +- 0.021\n",
-      "ivar: -0.1650\tcloading: 0.144\trloading: 0.100\t\tcretention: 0.000 +- 0.024\trretention: 0.000 +- 0.024\n",
-      "ivar: -0.1450\tcloading: 0.191\trloading: 0.124\t\tcretention: 0.000 +- 0.019\trretention: 0.000 +- 0.019\n",
-      "ivar: -0.1250\tcloading: 0.124\trloading: 0.135\t\tcretention: 0.000 +- 0.017\trretention: 0.000 +- 0.017\n",
-      "ivar: -0.1050\tcloading: 0.171\trloading: 0.116\t\tcretention: 0.000 +- 0.020\trretention: 0.000 +- 0.020\n",
-      "ivar: -0.0850\tcloading: 0.175\trloading: 0.124\t\tcretention: 0.000 +- 0.019\trretention: 0.000 +- 0.019\n",
-      "ivar: -0.0650\tcloading: 0.151\trloading: 0.096\t\tcretention: 0.000 +- 0.025\trretention: 0.000 +- 0.025\n",
-      "ivar: -0.0450\tcloading: 0.135\trloading: 0.080\t\tcretention: 0.000 +- 0.029\trretention: 0.000 +- 0.029\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n"
+      "{0: [[409], [399]], 1: [[421], [404]], 2: [[nan], [nan]]}\n",
+      "ivar: -11.0000\tcloading: 0.153\trloading: 0.023\t\tcretention: 0.891 +- 0.157\trretention: 0.571 +- 0.157\n",
+      "ivar: -10.4000\tcloading: 0.113\trloading: 0.023\t\tcretention: 0.912 +- 0.157\trretention: 0.571 +- 0.157\n",
+      "ivar: -9.8000\tcloading: 0.103\trloading: 0.063\t\tcretention: 0.935 +- 0.059\trretention: 0.895 +- 0.059\n",
+      "ivar: -9.2000\tcloading: 0.193\trloading: 0.186\t\tcretention: 0.897 +- 0.053\trretention: 0.661 +- 0.053\n",
+      "ivar: -8.6000\tcloading: 0.156\trloading: 0.395\t\tcretention: 0.787 +- 0.036\trretention: 0.681 +- 0.036\n",
+      "ivar: -8.0000\tcloading: 0.150\trloading: 0.561\t\tcretention: 0.800 +- 0.031\trretention: 0.657 +- 0.031\n",
+      "ivar: -7.4000\tcloading: 0.133\trloading: 0.615\t\tcretention: 0.925 +- 0.028\trretention: 0.703 +- 0.028\n",
+      "ivar: -6.8000\tcloading: 0.159\trloading: 0.545\t\tcretention: 0.896 +- 0.032\trretention: 0.585 +- 0.032\n",
+      "ivar: -6.2000\tcloading: 0.159\trloading: 0.545\t\tcretention: 0.875 +- 0.031\trretention: 0.659 +- 0.031\n",
+      "ivar: -5.6000\tcloading: 0.179\trloading: 0.688\t\tcretention: 0.685 +- 0.026\trretention: 0.734 +- 0.026\n",
+      "ivar: -5.0000\tcloading: 0.156\trloading: 0.664\t\tcretention: 0.787 +- 0.029\trretention: 0.630 +- 0.029\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b74d9f5a15049dab4481e3432cf0f58",
+       "model_id": "beb105efad2240268e2344ec2040f3d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,16 +102,20 @@
     "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
     "else:\n",
     "    experiment_file = ''\n",
+    "if 'fig' in locals():\n",
+    "    plt.close(fig)\n",
     "q = qdp.QDP(base_data_path=dp)\n",
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
-    "cs_cuts = [[46],[175]]\n",
-    "rb_cuts = [[42],[175]]\n",
-    "q.set_thresholds(cs_cuts, roi=0)\n",
-    "q.set_thresholds(rb_cuts, roi=1)\n",
-    "# q.generate_thresholds(loss=False)\n",
+    "cs_cuts = [[80],[80]]\n",
+    "rb_cuts = [[80],[80]]\n",
+    "#q.set_thresholds(cs_cuts, roi=0)\n",
+    "#q.set_thresholds(rb_cuts, roi=1)\n",
+    "q.generate_thresholds(loss=False)\n",
     "retention = q.apply_thresholds(exclude_rois=[2])\n",
     "cuts = q.get_thresholds()\n",
+    "\n",
+    "print(cuts)\n",
     "roi_map = ['cs', 'rb']\n",
     "entries = np.product(retention['retention'].shape[:-1])\n",
     "tbl_str = \"ivar: {0:.4f}\\tcloading: {1:.3f}\\trloading: {2:.3f}\\t\\tcretention: {3:.3f} +- {4:.3f}\\trretention: {5:.3f} +- {6:.3f}\"\n",
@@ -122,7 +126,7 @@
     "        retention['retention'].reshape((entries,-1))[i][0], retention['error'].reshape((entries,-1))[i][0],\n",
     "        retention['retention'].reshape((entries,-1))[i][1], retention['error'].reshape((entries,-1))[i][1]\n",
     "    ))\n",
-    "q.save_experiment_data()\n",
+    "#q.save_experiment_data()\n",
     "xlab = q.experiments[0]['variable_desc'][q.experiments[0]['variable_list'][0]]['description']\n",
     "fig, ax = plt.subplots()\n",
     "for e in range(len(retention['ivar'])):\n",
@@ -137,6 +141,13 @@
     "for fmt in fmts:\n",
     "    fig.savefig(fn.format(fmt), dpi=200, format=fmt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
