--- a/bin/fnode_readout_analysis.ipynb
+++ b/bin/fnode_readout_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -35,24 +35,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_11_02/2018_11_02_07_47_25_temp-1ms-cool/results.hdf5\n",
-      "ivars: []\n",
-      "--------------------\n",
+      "data at: 2019_04_12/2019_04_12_16_44_57_retentioniyread/results.hdf5\n",
+      "name 'fort_exp' is not defined\n",
+      "name 'rb_uwave_freq' is not defined\n",
+      "ivars: [u'Iz_read']\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
       "Internal work array size computation failed: -5\n",
-      "There may be some issue with your guess: `[2.72169077e-19 0.00000000e+00 0.00000000e+00]`\n",
+      "There may be some issue with your guess: `[1.32960841e-17 0.00000000e+00 0.00000000e+00]`\n",
+      "--------------------\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[1.32960841e-17 0.00000000e+00 0.00000000e+00]`\n",
       "--------------------\n",
       "Could not find conditional retention\n",
-      "ivar:\t0.0\tretention:\t0.9525(38)\t0.8874(38)\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "ivar:\t-0.14\tretention:\t0.982(11)\t0.000(11)\n",
+      "ivar:\t-0.12\tretention:\t0.981(11)\t0.000(11)\n",
+      "ivar:\t-0.1\tretention:\t0.9934(93)\t0.0000(93)\n",
+      "ivar:\t-0.08\tretention:\t0.9718(51)\t0.0000(51)\n",
+      "ivar:\t-0.06\tretention:\t0.9801(48)\t0.0000(48)\n",
+      "ivar:\t-0.04\tretention:\t0.9838(58)\t0.0000(58)\n",
+      "ivar:\t-0.02\tretention:\t0.9756(50)\t0.0000(50)\n",
+      "ivar:\t1.38777878078e-17\tretention:\t0.9600(80)\t0.0000(80)\n",
+      "ivar:\t0.02\tretention:\t0.9695(86)\t0.0000(86)\n",
+      "ivar:\t0.04\tretention:\t0.9719(66)\t0.0000(66)\n",
+      "ivar:\t0.06\tretention:\t0.9722(73)\t0.0000(73)\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
       "Could not find conditional retention\n",
       "------------------------------\n",
-      "cs_s0:\tbg: 28.70\tsig: 41.7\tcut: 48 \tload: 0.307831\n",
-      "cs_s1:\tbg: 28.55\tsig: 40.1\tcut: 47 \tload: 0.299407\n",
-      "rb_s0:\tbg: 36.21\tsig: 55.1\tcut: 62 \tload: 0.203323\n",
-      "rb_s1:\tbg: 36.74\tsig: 56.8\tcut: 63 \tload: 0.181860\n"
+      "cs_s0:\tbg: 44.15\tsig: 43.8\tcut: 64 \tload: 0.530629\n",
+      "cs_s1:\tbg: 43.33\tsig: 49.5\tcut: 65 \tload: 0.531697\n",
+      "rb_s0:\tbg: 41.69\tsig: 40.3\tcut: 63 \tload: 0.116286\n",
+      "rb_s1:\tbg: 38.86\tsig: 7.6\tcut: None\tload: 0.382801\n"
      ]
     }
    ],
@@ -114,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
@@ -122,7 +156,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "559a874baf1842a084e5cdbba35ad004",
+       "model_id": "52720d7deda8418493070bed17ecc9f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,10 +186,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.30783142 28.69567716 41.69547267]\n",
-      "[ 0.20332343 36.21213341 55.09853419]\n",
-      "[ 0.29940708 28.55014405 40.09162292]\n",
-      "[ 0.18185973 36.73814613 56.82798414]\n"
+      "[ 0.53062927 44.14824487 43.82929296]\n",
+      "[ 0.11628603 41.68690868 40.27116695]\n",
+      "[ 0.53169702 43.33420217 49.48464933]\n",
+      "[ 0.38280068 38.85803146  7.62147221]\n"
      ]
     }
    ],
