--- a/bin/fnode_retention_analysis-guassian.ipynb
+++ b/bin/fnode_retention_analysis-guassian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -31,19 +31,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_11_01/2018_11_01_13_25_14_temp-1ms-cool/results.hdf5\n",
+      "data at: 2018_12_18/2018_12_18_13_49_46_izreadretention/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'fort_drop_us']\n",
+      "ivars: [u'Iz_read']\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
       "Internal work array size computation failed: -5\n",
-      "There may be some issue with your guess: `[1.98845915e-17 0.00000000e+00 0.00000000e+00]`\n",
+      "There may be some issue with your guess: `[1.9488994e-18 0.0000000e+00 0.0000000e+00]`\n",
       "--------------------\n",
       "Internal work array size computation failed: -5\n",
-      "There may be some issue with your guess: `[1.98845915e-17 0.00000000e+00 0.00000000e+00]`\n",
+      "There may be some issue with your guess: `[1.9488994e-18 0.0000000e+00 0.0000000e+00]`\n",
       "--------------------\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
@@ -56,29 +56,17 @@
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "ivar: 0.0000\tcloading: 0.099\trloading: 0.600\t\tcretention: 0.848 +- 0.017\trretention: 0.905 +- 0.017\n",
-      "ivar: 2.8571\tcloading: 0.292\trloading: 0.461\t\tcretention: 0.960 +- 0.020\trretention: 0.874 +- 0.020\n",
-      "ivar: 5.7143\tcloading: 0.056\trloading: 0.593\t\tcretention: 0.895 +- 0.018\trretention: 0.895 +- 0.018\n",
-      "ivar: 8.5714\tcloading: 0.100\trloading: 0.570\t\tcretention: 0.800 +- 0.020\trretention: 0.865 +- 0.020\n",
-      "ivar: 11.4286\tcloading: 0.198\trloading: 0.482\t\tcretention: 0.878 +- 0.023\trretention: 0.810 +- 0.023\n",
-      "ivar: 14.2857\tcloading: 0.182\trloading: 0.522\t\tcretention: 0.871 +- 0.022\trretention: 0.836 +- 0.022\n",
-      "ivar: 17.1429\tcloading: 0.234\trloading: 0.470\t\tcretention: 0.860 +- 0.025\trretention: 0.761 +- 0.025\n",
-      "ivar: 20.0000\tcloading: 0.089\trloading: 0.406\t\tcretention: 0.814 +- 0.028\trretention: 0.695 +- 0.028\n",
-      "ivar: 22.8571\tcloading: 0.092\trloading: 0.353\t\tcretention: 0.846 +- 0.028\trretention: 0.645 +- 0.028\n",
-      "ivar: 25.7143\tcloading: 0.161\trloading: 0.320\t\tcretention: 0.810 +- 0.030\trretention: 0.553 +- 0.030\n",
-      "ivar: 28.5714\tcloading: 0.112\trloading: 0.356\t\tcretention: 0.742 +- 0.030\trretention: 0.462 +- 0.030\n",
-      "ivar: 31.4286\tcloading: 0.025\trloading: 0.308\t\tcretention: 0.625 +- 0.029\trretention: 0.388 +- 0.029\n",
-      "ivar: 34.2857\tcloading: 0.067\trloading: 0.344\t\tcretention: 0.744 +- 0.030\trretention: 0.450 +- 0.030\n",
-      "ivar: 37.1429\tcloading: 0.068\trloading: 0.266\t\tcretention: 0.686 +- 0.028\trretention: 0.335 +- 0.028\n",
-      "ivar: 40.0000\tcloading: 0.068\trloading: 0.227\t\tcretention: 0.661 +- 0.029\trretention: 0.359 +- 0.029\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
-      "Could not find conditional retention\n",
+      "ivar: -0.1100\tcloading: 0.143\trloading: 0.155\t\tcretention: 0.961 +- 0.017\trretention: 0.702 +- 0.017\n",
+      "ivar: -0.0900\tcloading: 0.219\trloading: 0.190\t\tcretention: 0.986 +- 0.017\trretention: 0.767 +- 0.017\n",
+      "ivar: -0.0700\tcloading: 0.121\trloading: 0.252\t\tcretention: 0.970 +- 0.008\trretention: 0.880 +- 0.008\n",
+      "ivar: -0.0500\tcloading: 0.189\trloading: 0.318\t\tcretention: 0.980 +- 0.008\trretention: 0.926 +- 0.008\n",
+      "ivar: -0.0300\tcloading: 0.205\trloading: 0.262\t\tcretention: 0.972 +- 0.009\trretention: 0.913 +- 0.009\n",
+      "ivar: -0.0100\tcloading: 0.145\trloading: 0.267\t\tcretention: 0.965 +- 0.008\trretention: 0.908 +- 0.008\n",
+      "ivar: 0.0100\tcloading: 0.180\trloading: 0.252\t\tcretention: 0.976 +- 0.009\trretention: 0.908 +- 0.009\n",
+      "ivar: 0.0300\tcloading: 0.166\trloading: 0.206\t\tcretention: 0.974 +- 0.012\trretention: 0.862 +- 0.012\n",
+      "ivar: 0.0500\tcloading: 0.225\trloading: 0.102\t\tcretention: 0.967 +- 0.026\trretention: 0.672 +- 0.026\n",
+      "ivar: 0.0700\tcloading: 0.285\trloading: 0.075\t\tcretention: 0.975 +- 0.036\trretention: 0.567 +- 0.036\n",
+      "ivar: 0.0900\tcloading: 0.233\trloading: 0.079\t\tcretention: 0.971 +- 0.032\trretention: 0.497 +- 0.032\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
@@ -95,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "914947cad5334b94ac7fbbe10c039247",
+       "model_id": "7b28bd5defaa4a26a30f1c6a9f055d35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,8 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-9.17562577e+01 -8.57548589e+08  2.00000000e-01  8.25591489e-01]\n",
-      "[8.12288863e+01 1.78014524e+09 2.00000000e-01 7.24534130e-01]\n"
+      "[ 0.01156738 -0.05214645 -0.00312008  0.97102834]\n",
+      "[ 9.19118370e+02 -2.58912799e-02  3.71859655e+00 -9.18183873e+02]\n"
      ]
     }
    ],
