--- a/bin/fnode_retention_analysis.ipynb
+++ b/bin/fnode_retention_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -27,10 +27,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_10_20/2018_10_20_08_56_28_ix-scan/results.hdf5\n",
+      "data at: 2018_12_18/2018_12_18_13_49_46_izreadretention/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'Iy']\n",
+      "ivars: [u'Iz_read']\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
@@ -42,23 +42,31 @@
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
       "Could not find conditional retention\n",
-      "ivar:\t-0.55\tretention:[1. 0. 0.] +- [nan nan nan]\n",
-      "ivar:\t-0.5\tretention:[0.99601594 0.         0.        ] +- [nan nan nan]\n",
-      "ivar:\t-0.45\tretention:[0.98969072 0.         0.        ] +- [nan nan nan]\n",
-      "ivar:\t-0.4\tretention:[0.97945205 0.         0.        ] +- [nan nan nan]\n",
-      "ivar:\t-0.35\tretention:[0.99390244 0.         0.        ] +- [nan nan nan]\n",
-      "ivar:\t-0.3\tretention:[0.97402597 0.         0.        ] +- [nan nan nan]\n",
-      "ivar:\t-0.25\tretention:[0.97852761 0.         0.        ] +- [nan nan nan]\n",
-      "ivar:\t-0.2\tretention:[0.97938144 0.         0.        ] +- [nan nan nan]\n",
-      "ivar:\t-0.15\tretention:[0.94964029 0.         0.        ] +- [nan nan nan]\n",
-      "ivar:\t-0.1\tretention:[0.95547945 0.         0.        ] +- [nan nan nan]\n",
-      "ivar:\t-0.05\tretention:[0.93703704 0.         0.        ] +- [nan nan nan]\n"
+      "ivar:\t-0.11\tretention:[0.00000000e+00 0.00000000e+00 3.10440858e-10] +- [nan nan nan]\n",
+      "ivar:\t-0.09\tretention:[0.0e+000 0.0e+000 1.8e-322] +- [nan nan nan]\n",
+      "ivar:\t-0.07\tretention:[0.00e+000 0.00e+000 2.17e-322] +- [nan nan nan]\n",
+      "ivar:\t-0.05\tretention:[0.0e+000 0.0e+000 1.8e-322] +- [nan nan nan]\n",
+      "ivar:\t-0.03\tretention:[0.00e+000 0.00e+000 2.17e-322] +- [nan nan nan]\n",
+      "ivar:\t-0.01\tretention:[0.0e+000 0.0e+000 1.8e-322] +- [nan nan nan]\n",
+      "ivar:\t0.01\tretention:[0.00e+000 0.00e+000 2.17e-322] +- [nan nan nan]\n",
+      "ivar:\t0.03\tretention:[0.0e+000 0.0e+000 1.8e-322] +- [nan nan nan]\n",
+      "ivar:\t0.05\tretention:[0.00e+000 0.00e+000 2.17e-322] +- [nan nan nan]\n",
+      "ivar:\t0.07\tretention:[0.0e+000 0.0e+000 1.8e-322] +- [nan nan nan]\n",
+      "ivar:\t0.09\tretention:[0.00e+000 0.00e+000 2.17e-322] +- [nan nan nan]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:131: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  errs[r] = (z/n[r].astype('float'))*np.sqrt(ns[r].astype('float')*(1.0-ns[r].astype('float')/n[r].astype('float')))\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff1e7e1b810e43f397972363e0b5065f",
+       "model_id": "c9384614f5c64959a6b04dbd75434470",
        "version_major": 2,
        "version_minor": 0
       },
